Attempting to add diagram tests to build